[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airflow-provider-hightouch"
dynamic = ["version"]
description = "Hightouch Provider for Airflow"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Hightouch", email = "pedram@hightouch.io" },
    { name = "Charis-Nicolas Georgiou", email = "charis@elegantsolutions.eu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["apache-airflow >= 2.6.3", "requests"]

[project.optional-dependencies]
test = ["pytest >= 6.2.3", "requests_mock >= 1.15"]
dev = ["ruff", "pylint", "mypy"]

[project.entry-points.apache_airflow_provider]
provider_info = "airflow_provider_hightouch:get_provider_info"

[project.urls]
"Bug Tracker" = "https://github.com/hightouchio/airflow-provider-hightouch/issues"
Homepage = "https://github.com/hightouchio/airflow-provider-hightouch"

[tool.hatch.version]
path = "src/airflow_provider_hightouch/version.py"
